# agentic-trading-terminal

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  HANDOFF.md  LICENSE  META_PROMPT.md  MVP_SPEC.md  PRODUCT_STRATEGY.md  PROJECT_PLAN.md  README.md  RESEARCH.md  ROADMAP.md  TEST_COVERAGE_ANALYSIS.md  commit-cycle-v16.bat  commit-debate-cycle.bat  docker-compose.yml  render.yaml  run-tests-feargreed.bat  start-backend-logged.bat  start-frontend-logged.bat  start-mobile.bat
backend/: Dockerfile  _synctest.txt  alembic.ini  pyproject.toml  run-dev.ps1  run-dev.sh
backend/app/: __init__.py  config.py  main.py  mcp_server.py
backend/app/agents/: graph.py  llm.py  run_demo.py  sizing.py  tools.py
backend/app/alerts/: __init__.py  engine.py  (+2 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_agent_stream.py  test_alert_research.py  test_alerts.py  test_analytics_api.py  test_approve_race.py  test_approve_rollback.py  test_audit.py  test_audit_wal.py  test_auth.py  test_auth_portfolio.py  test_backtest.py  test_batch_quotes.py  test_behavior.py  test_broker.py  test_correlations.py  test_debate.py  test_factors.py  test_hardening.py  test_hardening_f.py  test_hardening_h1.py  test_hardening_h2.py  test_hardening_security.py  test_health.py  test_hypotheses.py  test_llm_retry.py  test_llm_usage.py  test_mcp_server.py  test_migrations.py  test_notify.py  test_options.py  test_persistence.py  test_personas.py  test_portfolios.py  test_positions.py  test_providers_chain.py  test_reflections.py  test_research_technical.py  test_risk.py  test_scan_research.py  (+10 more)
(+82 files in other folders)
