[project]
name = "agentic-trading-terminal"
version = "0.1.0"
description = "AI-agent-driven trading terminal (crypto, US equities, options)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "redis>=5.2",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    # Agent engine + LLM
    "langgraph>=0.2",
    "openai>=1.54",  # OpenAI-compatible client, pointed at OpenRouter
    "mcp>=1.0",      # MCP server over the agent tool registry (propose-only)
    # Data / brokers (wire up in Phase 1)
    "alpaca-py>=0.33",
    "ccxt>=4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"  # aligned with requires-python >=3.11

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]